fixes program thumbnail title wrapping on home page

--- a/static/scss/homepage.scss
+++ b/static/scss/homepage.scss
@@ -434,7 +434,7 @@ body.app-media {
         width: 100%;
         height: 95px;
         bottom: -1px;
-        padding: 25px 22px;
+        padding: 25px 0 25px 22px;
         background: linear-gradient(to bottom,  rgba(0,0,0,0), rgba(0,0,0,1)); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
         z-index: 1;
@@ -447,7 +447,8 @@ body.app-media {
 
         .program-title {
           color: white;
-          font-size: 19px;
+          font-size: 17px;
+          font-weight: 400;
         }
 
         .program-num-courses {
